# webcore

./: .gitignore  .gitmodules  README.md  ROADMAP.md  android.hxml  desktop.hxml  extraParams.hxml  haxelib.json  ios.hxml  project.hxml  web.hxml
_example/: android.hxml  ios.hxml  main.hxml  vscode.code-workspace  web.hxml
_example/platform/android/: .gitignore
_example/platform/web/: index.html
_example/src/: App.hx
app/: AssetPack.hx  HaxeApp.hx  HaxeAppC.h  HaxeAppInterface.hx
app/android/: AppInstance.java  HaxeMainAppJNI.cpp
app/ios/asset-pack/: README.md
app/web/: HaxeAppCanvas.hx
audio/: AudioContext.hx  AudioDestinationNode.hx
audio/native/: AudioDecoder.hx  LockedValue.hx  NativeAudioNode.hx
device/: DeviceInfo.hx
device/native/: CFLocale.hx
example/: main.hxml  vscode.code-workspace
example/platform/web/: index.html
example/src/: App.hx  Example.hx  Example2.hx
filesystem/: File.hx
filesystem/native/: CFBundle.hx
image/: Image.hx
image/native/: StbImage.hx
lib/app/: AppInterface.hx  AssetPack.hx  HaxeApp.hx  HaxeAppC.cpp  HaxeAppC.h  HaxeAppInterface.hx  HaxeMainApp.hx  HaxeMainAppC.cpp  HaxeMainAppC.h  HaxeNativeBridge.hx  Macro.hx  MainAppBase.hx  MainAppInterface.hx
lib/app/android/: HaxeMainAppJNI.cpp
lib/app/ios/: AppInstance.swift
lib/app/native/: AppInstance.java  CAppInterface.cpp  CAppInterface.h  CHaxeMainApp.cpp  CHaxeMainApp.h  CHaxeNativeBridge.cpp  CHaxeNativeBridge.h  CMainAppInterface.cpp  CMainAppInterface.h  JNIHaxeMainApp.cpp
lib/app/web/: HaxeAppCanvas.hx
lib/asset/: Assets.hx
lib/audio/: AudioBuffer.hx  AudioBufferSourceNode.hx  AudioContext.hx  AudioDestinationNode.hx  AudioNode.hx  AudioParam.hx  AudioScheduledSourceNode.hx  AudioSprite.hx  GainNode.hx  README.md
lib/audio/native/: AudioDecoder.hx  MiniAudio.hx  NativeAudioNode.hx  native.c  native.h
lib/filesystem/: File.hx
lib/image/: Image.hx
lib/image/native/: StbImage.hx
lib/io/: File.hx
lib/typedarray/: ArrayBuffer.hx  Float32Array.hx  Int16Array.hx  Int32Array.hx  Int8Array.hx  Uint32Array.hx  Uint8Array.hx  Uint8ClampedArray.hx
lib/webgl/: Extension.hx  GLBuffer.hx  GLContext.hx  GLContextAttributes.hx  GLContextDebug.hx  GLFramebuffer.hx  GLShader.hx  GLShaderPrecisionFormat.hx
platform/android/: build-lib.hxml
platform/android/MinimalGLApp/app/: CMakeLists.txt
platform/android/MinimalGLApp/app/src/main/java/haxiomic/minimalglapp/: MainActivity.java  MinimalGL.java
platform/desktop/: build.hxml
platform/ios/: build-lib.hxml
platform/web/: index.html
src/: App.hx  Assets.hx  IMinimalGL.hx  LibMinimalGL.hx  Main.hx  MinimalGL.hx  NativeApi.hx
src/asset/: Assets.hx
src/audio/: Audio.hx  AudioBuffer.hx  AudioBufferSourceNode.hx  AudioContext.hx  AudioNode.hx  AudioScheduledSourceNode.hx  AudioSprite.hx  GainNode.hx  MiniAudio.hx  README.md  audio.c  audio.h  notes.md
src/native/: MinimalGL.cpp  MinimalGL.h  MinimalGL.swift  MinimalGLApi.hx  MinimalGLC.cpp  MinimalGLC.h  MinimalGLNative.hx  NativeInterface.hx  NativeMacro.hx
targets/android/: .gitignore  build-lib.hxml  target.hxml
targets/android/MinimalGLApp/app/: CMakeLists.txt  build.gradle
targets/android/MinimalGLApp/app/src/main/cpp/: MinimalGLJNI.cpp  gl_code.cpp
targets/android/MinimalGLApp/app/src/main/java/haxiomic/minimalglapp/: MainActivity.java  MinimalGL.java  MinimalGLAppActivity.java  MinimalGLAppLib.java  MinimalGLAppView.java  NativeLib.java  OpenGLES2View.java
targets/android/MinimalGLApp/app/src/main/res/values/: strings.xml
targets/ios/: build-lib.hxml
typedarray/: ArrayBuffer.hx  BufferSource.hx  Uint16Array.hx
wc/app/: AssetPack.hx  HaxeApp.hx  HaxeAppC.cpp  HaxeAppInterface.hx  Macro.hx
wc/audio/: AudioBuffer.hx  AudioBufferSourceNode.hx  AudioContext.hx  AudioDestinationNode.hx  AudioNode.hx  AudioParam.hx  AudioScheduledSourceNode.hx  GainNode.hx  README.md
wc/device/: Device.hx  DeviceInfo.hx
wc/event/: KeyLocation.hx  KeyboardEvent.hx  PointerEvent.hx  PointerType.hx  WheelEvent.hx
wc/filesystem/: File.hx
wc/image/: Image.hx
wc/typedarray/: ArrayBuffer.hx  ArrayBufferView.hx  DataView.hx  Float32Array.hx  Float64Array.hx  Int16Array.hx  Int32Array.hx  Int8Array.hx  Uint16Array.hx  Uint32Array.hx  Uint8Array.hx  Uint8ClampedArray.hx
wc/view/: IView.hx  View.js.hx  WebGLView.js.hx
wc/webgl/: Extension.hx  GLActiveInfo.hx  GLBuffer.hx  GLContext.hx  GLContextAttributes.hx  GLContextDebug.hx  GLFramebuffer.hx  GLProgram.hx  GLRenderbuffer.hx  GLShader.hx  GLShaderPrecisionFormat.hx  GLTexture.hx  GLUniformLocation.hx
webcore/audio/: AudioBuffer.hx  AudioBufferSourceNode.hx  AudioContext.hx  AudioDestinationNode.hx  AudioNode.hx  AudioParam.hx  AudioScheduledSourceNode.hx  GainNode.hx
webcore/device/: Device.hx
webcore/event/: KeyLocation.hx  KeyboardEvent.hx  PointerEvent.hx  PointerType.hx  WheelEvent.hx
webcore/filesystem/: File.hx
webcore/gl/: Extension.hx  GLActiveInfo.hx  GLBuffer.hx  GLContext.hx  GLContextAttributes.hx  GLContextDebug.hx  GLFramebuffer.hx  GLProgram.hx  GLRenderbuffer.hx  GLShader.hx  GLShaderPrecisionFormat.hx  GLTexture.hx  GLUniformLocation.hx
webcore/image/: Image.hx
webcore/typedarray/: ArrayBuffer.hx  ArrayBufferView.hx  DataView.hx  Float32Array.hx  Float64Array.hx  Int16Array.hx  Int32Array.hx  Int8Array.hx  Uint16Array.hx  Uint32Array.hx  Uint8Array.hx  Uint8ClampedArray.hx
webcore/view/: IView.hx  View.js.hx  WebGLView.js.hx
webcore/webgl/: Extension.hx  GLActiveInfo.hx  GLBuffer.hx  GLContext.hx  GLContextAttributes.hx  GLContextDebug.hx  GLFramebuffer.hx  GLProgram.hx  GLRenderbuffer.hx  GLShader.hx  GLShaderPrecisionFormat.hx  GLTexture.hx  GLUniformLocation.hx
webgl/: GLActiveInfo.hx  GLContext.hx  GLContextDebug.hx  GLProgram.hx  GLUniformLocation.hx
webgl/extension/: EXTColorBufferFloat.hx  EXTColorBufferHalfFloat.hx  EXTSrgb.hx  EXTTextureFilterAnisotropic.hx  OESTextureHalfFloat.hx
webgl/native/: ES2Context.h  ES2Context.hx  GLBuffer.hx  GLContext.hx  GLFramebuffer.hx  GLObject.hx  GLProgram.hx  GLRenderbuffer.hx  GLShader.hx  GLTexture.hx
(+215 files in other folders)
